# aurora-auth

./: Cargo.toml  docker-compose.yml
src/: main.rs
src/arithmiitics/: mod.rs  theory.rs
src/handler/: hello.rs  login.rs  mod.rs  register.rs  secret.rs
src/model/: claim.rs  jsonrep.rs  mod.rs  state.rs
src/route/: mod.rs  route.rs
src/service/: auth.rs  jwt.rs
src/shared/: state.rs
