[package]
name = "aurora-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
"chrono" = "0.4.41"
"axum" = "0.8.4"
"tokio" = {version = "1.47.1" , features = ["full"]}
"serde" = {version = "1.0.219" , features = ["derive"]}
"serde_json" ={ version = "1.0.143"}
"jsonwebtoken" = "9.3.1"
"dotenv" = "0.15.0"